force-app/main/default/objects/SnapShot_Book_and_Overdue__c/SnapShot_Book_and_Overdue__c.object-meta.xml
<CustomObject>
    <description>Daily Snaphot Book and Overdue</description>
    <label>SnapShot Book and Overdue</label>
    <nameField>
        <label>SnapShot Book and Overduee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SnapShot Book and Overdues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>