force-app/main/default/objects/SnapShot_Book_and_Overdue__c/fields/Book_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Book_USD_Equiv__c</fullName>
    <label>Book USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>