force-app/main/default/objects/SnapShot_Book_and_Overdue__c/fields/Overdue_1_7_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Overdue_1_7_USD_Equiv__c</fullName>
    <label>Overdue 1-7 USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>