force-app/main/default/objects/SnapShot_Book_and_Overdue__c/fields/Overdue_60_USD_Equi__c.field-meta.xml
<CustomField>
    <fullName>Overdue_60_USD_Equi__c</fullName>
    <label>Overdue 60+ USD Equi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>