force-app/main/default/objects/SnapShot_Book_and_Overdue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Book_USD_Equiv__c</columns>
    <columns>Overdue_1_7_USD_Equiv__c</columns>
    <columns>Overdue_31_59_USD_Equi__c</columns>
    <columns>Overdue_60_USD_Equi__c</columns>
    <columns>Overdue_8_14_USD_Equi__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>